<resources>
    <string name="app_name">RouteCraft</string>

    <!-- activity -->

        <string name="login_main_text">Rᴏᴜᴛᴇ Cʀᴀғᴛ</string>
        <string name="login_login_btn">Login</string>
        <string name="login_password_et_hint">Password</string>
        <string name="login_username_et_hint">Username</string>
        <string name="login_stay_logged_in_check_box">Stay Logged In</string>
        <string name="login_remember_username_check_box">Remember Username</string>

        <!-- MainActivity route info -->

        <string name="_0_stops">0 Stops</string>
        <string name="_0">0</string>
        <string name="last_stop">Last stop</string>
        <string name="_19_40">19:40</string>
        <string name="_11_57">-11:57</string>

        <!-- MainActivity navigation view -->
        <string name="navigation_view_username">Username</string>
        <string name="navigation_view_my_routes">My routes</string>
        <string name="navigation_view_new_route_btn">New route</string>
        <string name="navigation_view_logout_btn">Logout</string>
        <string name="route_menu_rename_route">Rename route</string>
        <string name="route_menu_delete_route">Delete route</string>

        <!-- MainActivity bottom navigation bar -->
        <string name="bottom_nav_menu_stops">Stops</string>
        <string name="bottom_nav_menu_map">Map</string>
        <string name="bottom_nav_menu_route">Route</string>

    <!-- /activity -->

    <!-- fragment -->

        <string name="address_list_sort_by_business">Sort by business</string>
        <string name="address_list_sort_as_inputted">Sort by input sequence</string>
        <string name="address_list_sort">Sort</string>
        <string name="add_address_add_btn">Add</string>
        <string name="add_address_cancel_btn">Cancel</string>
        <string name="add_address_street_and_house_number">Street and house number</string>
        <string name="add_address_1234">1234</string>
        <string name="add_address_aa">AA</string>
        <string name="add_address_city">City</string>
        <string name="add_address_with_auto_searching">Searching…</string>
        <string name="Add_address_with_auto_enter_address">Enter address</string>
        <string name="Add_address_with_auto_no_search_results">No search results</string>
        <string name="Add_address_with_auto_try_adding_it_manually">Try Adding it manually</string>

    <!-- /fragment -->

    <!-- Dialog -->

        <string name="message_tv">Message</string>
        <string name="ok_btn">OK</string>
        <string name="cancel_btn">Cancel</string>
        <string name="rename_route_btn">Rename route</string>
        <string name="add_route_btn">Add route</string>
        <string name="loading_tv">Loading…</string>
        <string name="delete_btn">Delete</string>
        <string name="delete_route_title">Delete route</string>
        <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete</string>
        <string name="route_name">Route name</string>
        <string name="new_route_title">New Route</string>
        <string name="rename_route_title">Rename route</string>

    <!-- /Dialog -->

    <!-- Items -->

        <string name="route_route_name">Route name</string>
        <string name="autocomplete_prediction_street_name">Street name</string>
        <string name="autocomplete_prediction_city_name">City name</string>

    <!-- /Items -->


</resources>
